@@ -29,6 +29,7 @@
 * VisaNet Peru: Refactor merchant_id and purchase_number handling [shasum]
 * Braintree Blue: Pass descriptor_url field [curiousepic]
 * VisaNet Peru: Add merchant_define_data option [duff]
+* Merchant e-Solutions: pass optional 3Dsecure params [curiousepic]
 
 
 == Version 1.58.0 (March 1, 2016)
